# algorithm-visualizations

./: .gitignore  README.md  pyproject.toml
src/visualizations/: main.py  type.py  utils.py
src/visualizations/visualizers/: NQueens.py  __init__.py  astar.py  hilbert_curve.py  life.py  marchsq.py  sand.py  sort.py  sudoku.py  visualizer.py  wavefunc.py  wolfram_automata.py  wolframca.py
src/visualizations/visualizers/pathfinder/: __init__.py  astar.py  bfs.py  cell.py  dfs.py  dijkstras.py  pathfinder.py  pathfinder_app.py
src/visualizations/visualizers/sorting/: __init__.py  bubble_sort.py  insertion_sort.py  selection_sort.py  sort.py  sorting_app.py
src/visualizations/visualizers/wave_function_collapse/: __init__.py  tileset.py  wave_func.py  wave_func_app.py
ui/: homepage.html
